# radish-lang

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: cli.rs  main.rs  repl.rs
examples/: Cargo.toml  README.md  factorial.rdsh  fib.rdsh  fizzbuzz.rdsh  rectangle.rdsh
examples/examples/: hello.rs  namespace.rs
radish/: Cargo.toml
radish-cli/: Cargo.toml
radish-cli/src/: cli.rs  hint.rs  main.rs  repl.rs
radish/src/: config.rs  lib.rs  namespace.rs
radish/src/common/: args.rs  bound_method.rs  chunk.rs  class.rs  disassembler.rs  file.rs  from_value.rs  immutable_string.rs  instance.rs  loader.rs  mod.rs  module.rs  native.rs  opcode.rs  span.rs  (+6 more)
src/: analysis.rs  ast.rs  compiler.rs  error.rs  lib.rs  main.rs  opcode.rs  parser.rs  scanner.rs  source.rs  span.rs  token.rs  value.rs  visitor.rs  vm.rs
src/cli/: mod.rs
src/common/: chunk.rs  disassembler.rs  interner.rs  mod.rs  module.rs  opcode.rs  span.rs  value.rs
src/compiler/: analysis.rs  ast.rs  compiler.rs  error.rs  mod.rs  parser.rs  scanner.rs  table.rs  token.rs  visitor.rs
src/error/: mod.rs  renderer.rs  views.rs
src/vm/: mod.rs  stack.rs  vm.rs
tests/: Cargo.toml  README.md  cli.rs  test.rs  test_runner.rs
tests/api/: hello.rs
tests/benchmarks/: fib.lua  fib.py  fib.rdsh
tests/snippets/: assignment.rdsh  binary_expr.rdsh  block.rdsh  class.rdsh  comments  comments.rdsh  constants.rdsh  functions.rdsh  globals.rdsh  if_stmt.rdsh  literals.rdsh  locals.rdsh  logical_op.rdsh  loop.rdsh  paren_expr.rdsh  recursion.rdsh  return.rdsh  unary_op.rdsh  while_loop.rdsh
(+97 files in other folders)
