[package]
name = "radish-lang"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1"
clap = "2.34.0"
termcolor = "1.1.2"

[dev-dependencies]
regex = "1"
lazy_static = "1.4.0"
assert_cmd = "2.0"
predicates = "2.1"